2008-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForReply]): if the reply style is outlook, then we use the
	content generated for inline forwarding.
	([SOGoMailObject -useOutlookStyleReplies]): new method that
	indicates whether the ud key "SOGoMailUseOutlookStyleReplies".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-expungeLastMarkedFolder]): do not perform the expunge if the
	marked folder is the current folder.

2008-09-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartAlternativeViewer.m
	([UIxMailPartAlternativeViewer -selectPartIndexFromTypes:]): give
	precedence on multipart/related parts.

	* UI/MailPartViewers/UIxMailRenderingContext.m
	([UIxMailRenderingContext -viewerForBodyInfo:_info]): add the
	mixed viewer as the viewer for "multipart/digest" content.

	* UI/MailPartViewers/UIxMailPartTextViewer.m (convertChars):
	fixed a buffer overflow. Incremented the buffer size to 8192.

2008-09-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailManager.m ([NGImap
	-copyMailURL:toFolderURL:password:]): do not compare the urls
	based on the instance that NGImap4ConnectionManager returns,
	because disabling the pooling will generate a bad result, even
	though the host:port pairs are the same.

2008-09-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailView.m ([UIxMailView
	-appendToResponse:_responseinContext:_ctx]): no longer invoke
	[NGImap4Client logout], since this is now handled by the
	NGImap4Connection manager (or not).

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions
	-markMessageUnreadAction]): no longer make use of [SOGoMailFolder
	unselect].
	([UIxMailActions -markMessageReadAction]): idem.

	* SoObjects/Mailer/SOGoMailFolder.m ([-unselect]): removed method
	since we no longer need it.

	* SoObjects/Mailer/SOGoMailBaseObject.m ([SOGoMailBaseObject